@@ -1,8 +1,11 @@
 package ru.netology.backend.service;
 
+import org.junit.platform.commons.logging.Logger;
+import org.junit.platform.commons.logging.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
+import ru.netology.backend.exception.FileNotfoundException;
 import ru.netology.backend.model.FileInfo;
 import ru.netology.backend.model.Token;
 import ru.netology.backend.repository.FileRepository;
@@ -18,32 +21,27 @@ import java.util.stream.Collectors;
 @Service
 public class FileService {
     private final FileRepository fileRepository;
-    private final TokenRepository tokenRepository;
     private final String uploadDir = System.getProperty("java.io.tmpdir");
+    private final Logger logger = LoggerFactory.getLogger(FileService.class);
 
-    @Value("${filename}")
-    private String filename;
-
-    public FileService(FileRepository fileRepository, TokenRepository tokenRepository) {
+    public FileService(FileRepository fileRepository) {
         this.fileRepository = fileRepository;
-        this.tokenRepository = tokenRepository;
     }
 
-    public List<String> listFiles(String token) {
-        Long userId = getUserIdByToken(token);
-        List<FileInfo> files = fileRepository.findByUserId(userId, filename);
+    public List<String> listFiles(Long userId) {
+        List<FileInfo> files = fileRepository.findByUserId(userId);
         return files.stream()
                 .map(FileInfo::getFilename)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public void saveFile(String token, MultipartFile file) {
-        Long userId = getUserIdByToken(token);
+    public void saveFile(Long userId, MultipartFile file) throws IOException {
         Path filePath = Paths.get(uploadDir, file.getOriginalFilename());
         try {
             Files.write(filePath, file.getBytes());
         } catch (IOException e) {
-            throw new RuntimeException("Could not save file", e);
+            logger.error("Could not save file: {}", file.getOriginalFilename(), e);
+            throw e; // проброс ошибки для отката
         }
         FileInfo fileInfo = new FileInfo();
         fileInfo.setFilename(file.getOriginalFilename());
@@ -51,25 +49,22 @@ public class FileService {
         fileInfo.setPath(filePath.toString());
         fileInfo.setUserId(userId);
         fileRepository.save(fileInfo);
+        logger.info("File saved: {} for user ID: {}", file.getOriginalFilename(), userId);
     }
 
-    public void deleteFile(String token, String filename) {
-        Long userId = getUserIdByToken(token);
-        FileInfo file = (FileInfo) fileRepository.findByUserId(userId, filename);
-        if (file != null) {
-            Path path = Paths.get(file.getPath());
-            try {
-                Files.deleteIfExists(path);
-            } catch (IOException e) {
-                throw new RuntimeException("Could not delete file", e);
-            }
-            fileRepository.delete(file);
+    public void deleteFile(Long userId, String filename) throws IOException {
+        FileInfo file = fileRepository.findByUserIdAndFilename(userId, filename);
+        if (file == null) {
+            throw new FileNotFoundException("File not found: " + filename);
         }
-    }
-
-    private Long getUserIdByToken(String token) {
-        Token tokenEntity = tokenRepository.findByTokenValueAndActiveTrue(token)
-                .orElseThrow(() -> new RuntimeException("Invalid token"));
-        return tokenEntity.getUserId();
+        Path path = Paths.get(file.getPath());
+        try {
+            Files.deleteIfExists(path);
+        } catch (IOException e) {
+            logger.error("Could not delete file: {}", path, e);
+            throw e; // проброс ошибки для отката
+        }
+        fileRepository.delete(file);
+        logger.info("File deleted: {} for user ID: {}", filename, userId);
     }
 }
